B&L QA/objects/Surgical_Field_Coaching_Report__c.object
<CustomObject>
    <fields>
        <fullName>Accountable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Items_for_next_Coaching_Visit__c</fullName>
        <label>Action Items for next Coaching Visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Dates_if_applicable__c</fullName>
        <label>Additional Dates if applicable:</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_if_ready_to_Email_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check if ready to Email Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_to_Act__c</fullName>
        <label>Close to Act</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Continuous_Learning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continuous Learning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Selling_Mode__c</fullName>
        <label>Create Selling Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creative_Entrepreneutial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creative/Entrepreneutial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_YTD_Sales_1__c</fullName>
        <label>Current YTD Sales 1</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_YTD_Sales_2__c</fullName>
        <label>Current YTD Sales 2</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_YTD_Sales_3__c</fullName>
        <label>Current YTD Sales 3</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Co_Travel__c</fullName>
        <label>Date of Co-Travel:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Frequency__c</fullName>
        <label>Evaluation Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insight_Messaging__c</fullName>
        <label>Insight Messaging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Reports_US1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Need_Dialog_to_Explore__c</fullName>
        <label>Need Dialog to Explore</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Business_Gained_Evaluation_Activity__c</fullName>
        <label>New Business Gained/Evaluation Activity:</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_scheduled_visits__c</fullName>
        <label>Number of scheduled visits</label>
        <summaryForeignKey>FCR_Account_Visit__c.FCR__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opening_to_Connect__c</fullName>
        <label>Opening to Connect</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Peer_to_Peer_Education__c</fullName>
        <label>Peer to Peer Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preparation__c</fullName>
        <label>Preparation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_YTD_Sales_1__c</fullName>
        <label>Prior YTD Sales 1</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_YTD_Sales_2__c</fullName>
        <label>Prior YTD Sales 2</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_YTD_Sales_3__c</fullName>
        <label>Prior YTD Sales 3</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Category_1__c</fullName>
        <label>Product Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Rep_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category_2__c</fullName>
        <label>Product Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Rep_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category_3__c</fullName>
        <label>Product Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Rep_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Product_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quota_1__c</fullName>
        <label>Quota 1</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quota_2__c</fullName>
        <label>Quota 2</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quota_3__c</fullName>
        <label>Quota 3</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_Comments__c</fullName>
        <label>Rep Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rep_Reviewed_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rep Reviewed/Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Type__c</fullName>
        <label>Rep Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>COS</fullName>
                </value>
                <value>
                    <fullName>PVM</fullName>
                </value>
                <value>
                    <fullName>RTM</fullName>
                </value>
                <value>
                    <fullName>SAS</fullName>
                </value>
                <value>
                    <fullName>SES</fullName>
                </value>
                <value>
                    <fullName>SPR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Representative:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Reports_US</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolving_Objections__c</fullName>
        <label>Resolving Objections</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resourceful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resourceful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Performance__c</fullName>
        <label>Sales Performance:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Planning_Execution__c</fullName>
        <label>Sales Planning Execution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Planning__c</fullName>
        <label>Sales Planning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_to_Quota_Attainment_1__c</fullName>
        <formula>IF( Quota_1__c  &gt; 0, Current_YTD_Sales_1__c  /  Quota_1__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales to Quota Attainment % 1</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_to_Quota_Attainment_2__c</fullName>
        <formula>IF( Quota_2__c  &gt; 0, Current_YTD_Sales_2__c  /  Quota_2__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales to Quota Attainment % 2</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_to_Quota_Attainment_3__c</fullName>
        <formula>IF( Quota_3__c  &gt; 0, Current_YTD_Sales_3__c  /  Quota_3__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales to Quota Attainment % 3</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shape_Selling_Mode__c</fullName>
        <label>Shape Selling Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Six_Critical_Selling_Skills__c</fullName>
        <label>Six Critical Selling Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Dialog_to_Leverage__c</fullName>
        <label>Solution Dialog to Leverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed_Efficiency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speed/Efficiency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In-Process</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Manager Notified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_FCR_will_become_read_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit? FCR will become read only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_to_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You must complete all fields on this section of the FCR before submitting to your manager.  These fields will be Read only after submitted.</inlineHelpText>
        <label>Submitted to Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summary_of_Business_Achievements__c</fullName>
        <label>Summary of Business Achievements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>T_E_MOH_Audits_Pipeline_Forecasting__c</fullName>
        <label>T&amp;E, MOH, Audits, Pipeline Forecasting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teamwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teamwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Energy_Managment__c</fullName>
        <label>Time/Energy Managment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FCR_Ratings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transparency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transparency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Standards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Standards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YOY_Sales_1__c</fullName>
        <formula>IF( Prior_YTD_Sales_1__c  &gt; 0, ( Current_YTD_Sales_1__c  -  Prior_YTD_Sales_1__c)  /  Prior_YTD_Sales_1__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY Sales % 1</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YOY_Sales_2__c</fullName>
        <formula>IF( Prior_YTD_Sales_2__c  &gt; 0, ( Current_YTD_Sales_2__c  -  Prior_YTD_Sales_2__c)  /  Prior_YTD_Sales_2__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY Sales % 2</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YOY_Sales_3__c</fullName>
        <formula>IF( Prior_YTD_Sales_3__c  &gt; 0, ( Current_YTD_Sales_3__c  -  Prior_YTD_Sales_3__c)  /  Prior_YTD_Sales_3__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY Sales % 3</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Surgical Field Coaching Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manager__c</columns>
        <columns>Representative__c</columns>
        <columns>Rep_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Date_of_Co_Travel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR{00000}</displayFormat>
        <label>Coaching Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgical Field Coaching Report</pluralLabel>
    <recordTypes>
        <fullName>USSUR_Accepted</fullName>
        <active>true</active>
        <description>Rep has reviewed and accepted the FCR</description>
        <label>USSUR Accepted</label>
    </recordTypes>
    <recordTypes>
        <fullName>USSUR_Completed</fullName>
        <active>true</active>
        <description>Manager has completed filling out the Form and ready fro submission to Rep</description>
        <label>USSUR Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>USSUR_In_Process</fullName>
        <active>true</active>
        <label>USSUR In-Process</label>
    </recordTypes>
    <recordTypes>
        <fullName>USSUR_Rep_New</fullName>
        <active>true</active>
        <label>USSUR Rep New</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Complete_all_section_before_submitting</fullName>
        <active>true</active>
        <errorConditionFormula>Submit_FCR_will_become_read_only__c  = true &amp;&amp;(
ISBLANK( text(Six_Critical_Selling_Skills__c)) ||
ISBLANK(text( Preparation__c )) || ISBLANK(text(  Need_Dialog_to_Explore__c )) || ISBLANK(text(  Resolving_Objections__c )) || ISBLANK(text(  Create_Selling_Mode__c )) || ISBLANK(text(  Opening_to_Connect__c )) || ISBLANK(text(  Solution_Dialog_to_Leverage__c )) || ISBLANK(text(  Close_to_Act__c )) || ISBLANK(text(  Insight_Messaging__c )) || ISBLANK(text(  Shape_Selling_Mode__c )) || ISBLANK(text(  Sales_Planning__c )) || ISBLANK(text(  Peer_to_Peer_Education__c )) || ISBLANK(text(  Time_Energy_Managment__c )) || ISBLANK(text(  Sales_Planning_Execution__c )) || ISBLANK(text(  Evaluation_Frequency__c )) || ISBLANK(text(  T_E_MOH_Audits_Pipeline_Forecasting__c )) ||  ISBLANK( Summary_of_Business_Achievements__c ) ||  ISBLANK( Action_Items_for_next_Coaching_Visit__c ) || ( Accountable__c  = FALSE &amp;&amp;  Resourceful__c  = false &amp;&amp;  Creative_Entrepreneutial__c  = FALSE  &amp;&amp;  Speed_Efficiency__c  = FALSE  &amp;&amp;  Transparency__c  = FALSE  &amp;&amp;  Teamwork__c  = FALSE  &amp;&amp;  Work_Standards__c  = FALSE  &amp;&amp;  Continuous_Learning__c  = FALSE ))</errorConditionFormula>
        <errorDisplayField>Submit_FCR_will_become_read_only__c</errorDisplayField>
        <errorMessage>Complete Sections 3-6 before Submitting Completed FCR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rep_must_complete_all_FCR_fields</fullName>
        <active>true</active>
        <errorConditionFormula>Submitted_to_Manager__c  = true  &amp;&amp; ( ISBLANK( Manager__c ) ||
 ISBLANK(  Representative__c ) || ISBLANK(   Date_of_Co_Travel__c ) || ISBLANK(  text(Product_Category_1__c) ) || Quota_1__c = 0 ||
ISBLANK(  text(Product_Category_2__c) ) || Quota_2__c = 0 ||
ISBLANK(  text(Product_Category_3__c) ) || Quota_3__c = 0 ||
ISBLANK(  text(Product_Category_4__c) ) || Quota_4__c = 0 ||
 ISBLANK( New_Business_Gained_Evaluation_Activity__c )
||  Number_of_scheduled_visits__c = 0 )</errorConditionFormula>
        <errorMessage>You must populate all fields before you can submit to your manager including at least 1 account Vist.  NOTE This form will be Read only after submission.</errorMessage>
    </validationRules>
</CustomObject>